[package]
name = "squeeze"
version = "0.0.1"
edition = "2018"
authors = ["Jesse Laning <jesse@jlaning.com>"]
license = "MIT OR Apache-2.0"
description = "Rust compression library"
homepage = "https://github.com/jamolnng/squeeze"
documentation = "https://github.com/jamolnng/squeeze"
repository = "https://github.com/jamolnng/squeeze"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
